--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>js1</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
+
+
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
