--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>js1</title>
+    <title>Day 2 Home Work</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -10,5 +10,9 @@
 
 
     <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/app.js">
+
+
+    </script>
   </body>
 </html>
