finished day 3-2 home  work still cant get cancel button to work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Day 2 Home Work</title>
+    <title>Day Take Home 3-2 Home Work</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -16,3 +16,8 @@
     </script>
   </body>
 </html>
+<!-- Prompts your user for their name.
+
+Next, ask the user's favorite color. (Provide the user with the basic 10 colors as options i.e. red, orange, yellow, green, blue, pink, purple, black, white, and grey).
+
+Depending on the color, write 9 different responses for the possible answers. Include the user's name in the response message. -->
