--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Day 2 Home Work</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Day 6 Home Work</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 col-sm-offset-3 box">
+        <h1 class="title">Celcius/Fahrenheit Calculator</h1>
+        <div class="col-md-2 col-md-offset-5">
+
+          <div class="form-group">
+            <label class="dropdown-box"  for="dropdown-menu">Covert to</label>
+            <select class="form-control" id="dropdown">
+              <option>Fahrenheit</option>
+              <option>Celcius</option>
+        </select>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-md-2 col-md-offset-5">
+            <label class="temp-label" for="temp">Enter Temp</label>
+            <input type="text" placeholder="0" class="form-control" id="temp">
+          </div>
+        </div>
+        <div>
+          <button onclick="calc()" type="button" class="btn btn-secondary">Enter</button>
+        </div>
+        <div class="col-md-4 col-md-offset-4 panal-dec panel panel-default">
+          <div id="answer" class="panel-body"></div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
 
 
 
-    <script type="text/javascript" src="js/script.js"></script>
-    <script src="js/app.js">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    </script>
-  </body>
+  <script src="js/app.js"></script>
+</body>
+
 </html>
