--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Day 2 Home Work</title>
+    <title>Day 8 Class Work</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-
+<form action="http://pendofam4.com" method="post" name="login">
+<label for="">login</label>
+<input type="text" name="username" id="a">
+<label for="">password</label>
+<input type="text" name="password" id="b">
+<input type="submit">
+</form>
 
 
     <script type="text/javascript" src="js/script.js"></script>
