--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div>
-          <button onclick="calc()" type="button" class="btn btn-secondary">Enter</button>
+          <button onclick="calc()" type="button" class="btn btn-secondary">Calculate</button>
         </div>
         <div class="col-md-4 col-md-offset-4 panal-dec panel panel-default">
           <div id="answer" class="panel-body"></div>
