Add more bootstrap

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>JS1 Final Project</title>
 
   <!-- bootstrap Link -->
-  <link rel="stylesheet" href="/js1/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
   <!-- My CSS Link -->
   <link rel="stylesheet" href="css/styles.css">
@@ -20,40 +20,34 @@
 
 </head>
 
-<body
- <div class="container-fluid">
+<body <div class="container-fluid">
   <div id="body" class="body-container">
+    <img src="images/chores.png" alt="Back ground image of chore bucket" />
     <h1>Weekly Todo List</h1>
-    <img src="/js1/images/chores.png" alt="Back ground image of chore bucket" />
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <div class="col-md-6 ul-box">
-<button class="btn btn-danger">Help</button>
-          </div>
-          <div class="col-md-6 form-box">
-            <form>
-              <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-              </div>
 
-          </div>
+    <section class="row">
+      <div class="Container">
+      <div class="col-md-12">
+        <div class="col-md-6 ul-box">
 
-        </div>
+          <ul>
+            <li class="item1">item 013</li>
+            <li class="item2">item 023</li>
+            <li class="item3">item 033</li>
+          </ul>
+
+
+
+          <form class="col-md-6 form-box">
+<h1>alhbfvlasjbvcasfdbpibn</h1>
+          </form>
+
 
       </div>
-
-    </div>
-</div><!--Container Div-->
-
+</div>
+      </div>
+    </section>
+  </div><!--Container Div-->
 
 
 
@@ -65,8 +59,8 @@
 
 
   <!--*************Script Section****************-->
-  <script type="text/javascript" src="/js1/node_modules/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="/js1/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 
