--- a/index.html
+++ b/index.html
@@ -16,38 +16,130 @@
 
   <!-- Google Font Link -->
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Lobster|Pacifico" rel="stylesheet">
-
-
 </head>
-
-<body <div class="container-fluid">
+<body class="container-fluid">
   <div id="body" class="body-container">
     <img src="images/chores.png" alt="Back ground image of chore bucket" />
     <h1>Weekly Todo List</h1>
-
-    <section class="row">
-      <div class="Container">
-      <div class="col-md-12">
-        <div class="col-md-6 ul-box">
-
-          <ul>
-            <li class="item1">item 013</li>
-            <li class="item2">item 023</li>
-            <li class="item3">item 033</li>
+    <div class="container">
+      <section class="row col-md-12 section-container">
+        <div class="col-md-8 ul-box box">
+          <h2 class="ul-h2 day-header">Monday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
           </ul>
-
-
-
-          <form class="col-md-6 form-box">
-<h1>alhbfvlasjbvcasfdbpibn</h1>
-          </form>
-
-
-      </div>
+          <h2 class="day-header">Tuesday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
+          </ul>
+          <h2 class="day-header">Wednesday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
+          </ul>
+          <h2 class="day-header">Thursday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
+          </ul>
+          <h2 class="day-header">Friday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
+          </ul>
+          <h2 class="day-header">Saturday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
+          </ul>
+          <h2 class="day-header">Sunday</h2>
+          <ul class="day-box">
+            <li class="item1">item 1</li>
+          </ul>
+        </div>
+        <form class="col-md-4 form-box">
+          <h2 class="form-header">Enter New Todo</h2>
+          <div class="form-group">
+            <label for="selday">Select Day (select one):</label>
+            <select class="form-control" id="sel1">
+                  <option>Monday</option>
+                  <option>Tuesday</option>
+                  <option>Wednesday</option>
+                  <option>Thursday</option>
+                  <option>Friday</option>
+                  <option>Saturday</option>
+                  <option>Sunday</option>
+                </select>
+            <br />
+            <label for="seltime">Select Time (select one):</label>
+            <select class="form-control" id="sel2">
+<option value="05:00">5:00 AM</option>
+<option value="05:30">5:30 AM</option>
+<option value="06:00">6:00 AM</option>
+<option value="06:30">6:30 AM</option>
+<option value="07:00">7:00 AM</option>
+<option value="07:30">7:30 AM</option>
+<option value="08:00">8:00 AM</option>
+<option value="08:30">8:30 AM</option>
+<option value="09:00" selected="">09:00 AM</option>
+<option value="09:30">9:30 AM</option>
+<option value="10:00">10:00 AM</option>
+<option value="10:30">10:30 AM</option>
+<option value="11:00">11:00 AM</option>
+<option value="11:30">11:30 AM</option>
+<option value="12:00">12:00 PM</option>
+<option value="12:30">12:30 PM</option>
+<option value="13:00">1:00 PM</option>
+<option value="13:30">1:30 PM</option>
+<option value="14:00">2:00 PM</option>
+<option value="14:30">2:30 PM</option>
+<option value="15:00">3:00 PM</option>
+<option value="15:30">3:30 PM</option>
+<option value="16:00">4:00 PM</option>
+<option value="16:30">4:30 PM</option>
+<option value="17:00">5:00 PM</option>
+<option value="17:30">5:30 PM</option>
+<option value="18:00">6:00 PM</option>
+<option value="18:30">6:30 PM</option>
+<option value="19:00">7:00 PM</option>
+<option value="19:30">7:30 PM</option>
+<option value="20:00">8:00 PM</option>
+<option value="20:30">8:30 PM</option>
+<option value="21:00">9:00 PM</option>
+<option value="21:30">9:30 PM</option>
+<option value="22:00">10:00 PM</option>
+<option value="22:30">10:30 PM</option>
+<option value="23:00">11:00 PM</option>
+<option value="23:30">11:30 PM</option>
+<option value="00:00">12:00 AM</option>
+<option value="00:30">12:30 AM</option>
+<option value="01:00">1:00 AM</option>
+<option value="01:30">1:30 AM</option>
+<option value="02:00">2:00 AM</option>
+<option value="02:30">2:30 AM</option>
+<option value="03:00">3:00 AM</option>
+<option value="03:30">3:30 AM</option>
+<option value="04:00">4:00 AM</option>
+<option value="04:30">4:30 AM</option>
+                </select>
+            <br />
+            <div class="form-group">
+              <label for="comment">Todo:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+            </div>
+            <div>
+              <button value=" Send" class="btn btn-primary" type="submit" id="submit">Submit</button>
+            </div>
+          </div>
+        </form>
+<div class="row col-md-12 comp-header">
+  <h2 class="comp-header">Completed Todo List</h2>
 </div>
-      </div>
-    </section>
-  </div><!--Container Div-->
+<div class="col-md-12 comp-li row">
+  <ul class="comp-ul">
+    <li id="done" class="comp-ul" >Job Done</li>
+  </ul>
+</div>
+      </section>
+    </div>
+  </div>
+  <!--Container Div-->
 
 
 
