add remove and complet buttons and fix margins

--- a/index.html
+++ b/index.html
@@ -26,32 +26,20 @@
       <section class="row col-md-12 section-container">
         <div id="ul-col" class="col-md-8 ul-box box ">
           <h2 class="ul-h2 day-header">Monday</h2>
-          <ul id="Monday" class="day-box">
-          </ul>
+
+          <ul id="Monday" class="day-box"></ul>
           <h2 class="day-header">Tuesday</h2>
-          <ul id="Tuesday" class="day-box">
-            <li class="item1">item 1</li>
-          </ul>
+          <ul id="Tuesday" class="day-box"></ul>
           <h2 class="day-header">Wednesday</h2>
-          <ul id="Wednesday" class="day-box">
-            <li class="item1">item 1</li>
-          </ul>
+          <ul id="Wednesday" class="day-box"></ul>
           <h2 class="day-header">Thursday</h2>
-          <ul id="Thursday" class="day-box">
-            <li class="item1">item 1</li>
-          </ul>
+          <ul id="Thursday" class="day-box"></ul>
           <h2 class="day-header">Friday</h2>
-          <ul id="Friday" class="day-box">
-            <li class="item1">item 1</li>
-          </ul>
+          <ul id="Friday" class="day-box"></ul>
           <h2 class="day-header">Saturday</h2>
-          <ul id="Saturday" class="day-box">
-            <li class="item1">item 1</li>
-          </ul>
+          <ul id="Saturday" class="day-box"></ul>
           <h2 class="day-header">Sunday</h2>
-          <ul id="Sunday" class="day-box">
-            <li class="item1">item 1</li>
-          </ul>
+          <ul id="Sunday" class="day-box"></ul>
         </div>
         <div id="form-col" class="col-md-4 form-box">
           <h2 class="form-header">Enter New Todo</h2>
