--- a/index.html
+++ b/index.html
@@ -57,54 +57,54 @@
             <br />
             <label for="seltime">Select Time (select one):</label>
             <select class="form-control" id="time">
-                  <option>5:30 AM</option>
-                  <option>5:00 AM</option>
-                  <option>6:00 AM</option>
-                  <option>6:30 AM</option>
-                  <option>7:00 AM</option>
-                  <option>7:30 AM</option>
-                  <option>8:00 AM</option>
-                  <option>8:30 AM</option>
-                  <option selected="">9:00 AM</option>
-                  <option>9:30 AM</option>
-                  <option>10:00 AM</option>
-                  <option>10:30 AM</option>
-                  <option>11:00 AM</option>
-                  <option>11:30 AM</option>
-                  <option>12:00 PM</option>
-                  <option>12:30 PM</option>
-                  <option>1:00 PM</option>
-                  <option>1:30 PM</option>
-                  <option>2:00 PM</option>
-                  <option>2:30 PM</option>
-                  <option>3:00 PM</option>
-                  <option>3:30 PM</option>
-                  <option>4:00 PM</option>
-                  <option>4:30 PM</option>
-                  <option>5:00 PM</option>
-                  <option>5:30 PM</option>
-                  <option>6:00 PM</option>
-                  <option>6:30 PM</option>
-                  <option>7:00 PM</option>
-                  <option>7:30 PM</option>
-                  <option>8:00 PM</option>
-                  <option>8:30 PM</option>
-                  <option>9:00 PM</option>
-                  <option>9:30 PM</option>
-                  <option>10:00 PM</option>
-                  <option>10:30 PM</option>
-                  <option>11:00 PM</option>
-                  <option>11:30 PM</option>
-                  <option>12:00 AM</option>
-                  <option>12:30 AM</option>
-                  <option>1:00 AM</option>
-                  <option>1:30 AM</option>
-                  <option>2:00 AM</option>
-                  <option>2:30 AM</option>
-                  <option>3:00 AM</option>
-                  <option>3:30 AM</option>
-                  <option>4:00 AM</option>
-                  <option>4:30 AM</option>
+                  <option>5:30AM</option>
+                  <option>5:00AM</option>
+                  <option>6:00AM</option>
+                  <option>6:30AM</option>
+                  <option>7:00AM</option>
+                  <option>7:30AM</option>
+                  <option>8:00AM</option>
+                  <option>8:30AM</option>
+                  <option selected="">9:00AM</option>
+                  <option>9:30AM</option>
+                  <option>10:00AM</option>
+                  <option>10:30AM</option>
+                  <option>11:00AM</option>
+                  <option>11:30AM</option>
+                  <option>12:00PM</option>
+                  <option>12:30PM</option>
+                  <option>1:00PM</option>
+                  <option>1:30PM</option>
+                  <option>2:00PM</option>
+                  <option>2:30PM</option>
+                  <option>3:00PM</option>
+                  <option>3:30PM</option>
+                  <option>4:00PM</option>
+                  <option>4:30PM</option>
+                  <option>5:00PM</option>
+                  <option>5:30PM</option>
+                  <option>6:00PM</option>
+                  <option>6:30PM</option>
+                  <option>7:00PM</option>
+                  <option>7:30PM</option>
+                  <option>8:00PM</option>
+                  <option>8:30PM</option>
+                  <option>9:00PM</option>
+                  <option>9:30PM</option>
+                  <option>10:00PM</option>
+                  <option>10:30PM</option>
+                  <option>11:00PM</option>
+                  <option>11:30PM</option>
+                  <option>12:00AM</option>
+                  <option>12:30AM</option>
+                  <option>1:00AM</option>
+                  <option>1:30AM</option>
+                  <option>2:00AM</option>
+                  <option>2:30AM</option>
+                  <option>3:00AM</option>
+                  <option>3:30AM</option>
+                  <option>4:00AM</option>
+                  <option>4:30AM</option>
                 </select>
 
             <br/>
@@ -117,18 +117,14 @@
               <button value="send" class="btn btn-primary" type="submit" id="submit">Submit</button>
             </div>
           </div>
-
-
-        <div id="div-complete" class="row col-md-12 comp-header">
-          <h2 class="comp-header">Completed Todo List</h2>
-
-          <div id="complete" class="col-md-12 comp-li row">
-            <ul id="ul-complete">
-              <li id="li-complete" class="comp-ul">Job Done</li>
-            </ul>
-          </div>
+      </div>
+      <div id="div-complete" class="row col-md-12 comp-header">
+        <h2 class="comp-header">Completed Todo List</h2>
+        <div id="complete" class="col-md-12 comp-li row">
+          <ul id="ulComplete" class="ul-complete"></ul>
         </div>
       </div>
+
       </section>
     </div>
   </div>
