--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="form-col" class="col-md-4 form-box">
           <h2 class="form-header">Enter New Todo</h2>
           <div class="form-group">
-            <label for="selday">Select Day (select one):</label>
+            <label class="form-label" for="selday">Select Day (select one):</label>
             <select class="form-control" id="day">
                   <option>Monday</option>
                   <option>Tuesday</option>
@@ -55,7 +55,7 @@
                   <option>Sunday</option>
                 </select>
             <br />
-            <label for="seltime">Select Time (select one):</label>
+            <label class="form-label" for="seltime">Select Time (select one):</label>
             <select class="form-control" id="time">
                   <option>5:30AM</option>
                   <option>5:00AM</option>
@@ -109,7 +109,7 @@
 
             <br/>
             <div class="form-box">
-              <label for="comment">Todo:</label>
+              <label class="form-label" for="comment">Todo:</label>
               <input type="text" class="form-control" id="comment" placeholder="Type in your Todo:">
             </div>
             <!-- Submit Button to sent time, day, todo to list -->
