fix delete button on final completed box

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <!-- Submit Button to sent time, day, todo to list -->
             <div class="col-md-12 submit-button">
-              <button value="send" class="btn btn-primary" type="submit" id="submit">Submit</button>
+              <button type="button" value="send" class="btn btn-primary" type="submit" id="submit">Submit</button>
             </div>
           </div>
       </div>
